# learn-to-play-poe

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  Justfile  NOTICE  README.md  ROADMAP.md  ROADMAP_DETAILS.md  build.rs  l2p-poe.toml.example  learn-to-play.code-workspace  poe-info-service.toml.example  vcpkg.json
.agents/: AGENTS.md
.claude/: CLAUDE.md  settings.json
.github/workflows/: build-windows.yml  ci-windows.yml  ci.yml
cmake/: ValidateDocUrls.cmake
data/: schema.sql  seed_base.sql
data/areas/: boss_arena.sql  campaign_act_1.sql  campaign_act_10.sql  campaign_act_10_vaal_side_area.sql  campaign_act_1_vaal_side_area.sql  campaign_act_2.sql  campaign_act_2_vaal_side_area.sql  campaign_act_3.sql  campaign_act_3_vaal_side_area.sql  campaign_act_4.sql  campaign_act_4_vaal_side_area.sql  campaign_act_5.sql  campaign_act_5_vaal_side_area.sql  campaign_act_6.sql  campaign_act_6_vaal_side_area.sql  campaign_act_7.sql  campaign_act_7_vaal_side_area.sql  campaign_act_8.sql  campaign_act_8_vaal_side_area.sql  campaign_act_9.sql  campaign_act_9_vaal_side_area.sql  heist.sql  map.sql  map_vaal_side_area.sql  mechanic.sql  pvp.sql
dev/: check_setup.ps1  perf_baseline_prev.py  perf_compare.py  refilter_logs.py
dev/area_seeds/: check_area_coverage.py  gen_area_seed.py  ingest_client_log.py  load_seed_to_db.py  update_areas.py
dev/log_split/: parse_npc_dialog.py  refilter_logs.py
docs/: cli.md  schema.md
docs/decisions/: 001-technology-stack.md  003-mobile-first-ui-design.md  004-game-addon-interaction-principles.md  006-poe-info-service.md
docs/measurements/: client.md  database.md  dev_client_log_filtering.md  perf_metrics.md
docs/rationale/: chat.md  exit-confirmation.md
docs/rationales/: chat.md  exit-confirmation.md  legacy-api.md  oauth-api.md  steam-api-key.md
docs/source/: game-running.md
docs/sources/: game-running.md  game-started.md  game-stopped.md  zone-transition.md
installer/: windows.iss
poe-info-service/: CONTRIBUTING.md  LICENSE-ALTERNATE  NOTICE  README.md  cli.go  cli_test.go  go.mod  go.sum  main.go  main_test.go
poe-info-service/config/: config.go  config_test.go
poe-info-service/dev/: ingest_client_log.py
poe-info-service/dev/area_seeds/: check_area_coverage.py  combine_seed.py  gen_area_seed.py  ingest_client_log.py  load_seed_to_db.py  update_areas.py
poe-info-service/dev/log_split/: parse_npc_dialog.py  refilter_logs.py
poe-info-service/docs/: api.md  architecture.md  cli.md  schema.md
poe-info-service/docs/decisions/: 001-single-shared-instance-lifecycle.md  002-distribution-and-self-update.md  003-client-api-versioning.md  004-credential-custody.md  005-credential-storage-mechanism.md  006-user-config-storage.md  007-outbound-http-integration-policy.md
poe-info-service/internal/channels/: channels.go  channels_test.go
poe-info-service/internal/creds/: creds.go  creds_other.go  creds_windows.go  creds_windows_test.go
src/: AppConfig.cpp  AppConfig.h  AppStyle.cpp  CMakeLists.txt  ChatPage.cpp  ChatPage.h  CurrentPage.cpp  CurrentPage.h  Database.cpp  Database.h  DmPage.cpp  DmPage.h  Docs.h  GameOverlay.cpp  GameOverlay.h  ListEditor.cpp  ListEditor.h  LiveAlertsDialog.cpp  LiveAlertsDialog.h  LiveEvent.h  LiveEventBus.cpp  LiveEventBus.h  LiveEventRuleEngine.cpp  LiveEventRuleEngine.h  LogIngestWorker.cpp  LogIngestWorker.h  MainWindow.cpp  MainWindow.h  NavBar.cpp  NotificationWidget.cpp  NotificationWidget.h  NotificationsPanel.cpp  OverlayKeepalive.cpp  PastPage.cpp  PastPage.h  PoeAccountStore.cpp  PoeLoginWindow.cpp  PoeLoginWindow.h  QueryService.cpp  QueryService.h  (+18 more)
src/core/: AppConfig.cpp  AppConfig.h  Cli.cpp  DeferredTaskQueue.cpp  DeferredTaskQueue.h  MainWindow.cpp  MainWindow.h  PaintProbeFilter.cpp  PaintProbeFilter.h  PerfProbe.cpp  PerfProbe.h
src/db/: Database.cpp  Database.h  DatabaseHealth.cpp  DatabaseHealthWorker.cpp  DatabaseHealthWorker.h  QueryService.cpp  QueryService.h
src/events/: LiveEventBus.cpp  LiveEventBus.h  LiveEventRule.h  LiveEventRuleEngine.cpp  LiveEventRuleEngine.h
src/platform/: OverlayKeepalive.cpp  OverlayKeepalive.h  WindowTrackerLinux.cpp  WindowTrackerWindows.cpp  l2p-poe.manifest  l2p-poe.rc  l2p-poe1.rc
src/services/: PoeInfoClient.cpp  PoeInfoClient.h  PoeInfoRecords.h  ServiceManager.cpp  ServiceManager.h
src/ui/: AppStyle.cpp  AppStyle.h  InstallDirNotice.cpp  InstallDirNotice.h  NavBar.cpp  NavBar.h  TaskPanel.cpp  TaskPanel.h  Theme.cpp  Theme.h
src/ui/chat/: ChatPage.cpp  ChatPage.h  DmPage.cpp  DmPage.h
src/ui/log/: CurrentPage.cpp  CurrentPage.h  LogPage.cpp  LogPage.h  PastPage.cpp  PastPage.h  SessionQueryLimits.h  SessionViewPage.cpp  SessionViewPage.h  ZoneAfkSuffix.h
src/ui/overlay/: GameOverlay.cpp  GameOverlay.h
src/ui/settings/: PoeLoginWindow.cpp  PoeLoginWindow.h  SettingsDialog.cpp  SettingsDialog.h  SettingsPage.cpp  SettingsPage.h  SteamKeyLoginWindow.cpp  SteamKeyLoginWindow.h
src/ui/stash/: StashPage.cpp  StashPage.h
src/ui/widgets/: ListEditor.cpp  NotificationWidget.cpp  NotificationWidget.h  NotificationsPanel.cpp  NotificationsPanel.h  ScrollJumpButton.cpp
src/util/: DialogHash.h  Docs.h  PoeAccountStore.cpp  PoeAccountStore.h  PoeOAuthStore.cpp  PoeOAuthStore.h  SteamAccountStore.cpp  SteamAccountStore.h  SteamApiKeyExtractor.h
src/workers/: BackgroundWorker.h  CloseOrphanSessionsWorker.cpp  CloseOrphanSessionsWorker.h  LogIngestWorker.cpp  LogIngestWorker.h  ProgressTrackerWorker.h  TaskManager.cpp  TaskManager.h
tests/: CMakeLists.txt  FakePoeInfoServer.cpp  FakePoeInfoServer.h  perf_targets.h  perf_targets.json  test_log_startup.cpp  test_logpage_retry.cpp  test_perf_metrics.cpp  test_placeholder.cpp  test_poeoauthstore.cpp  test_ref_data.cpp  test_session_query_limits.cpp  test_sessionviewpage_retry.cpp  test_startup_timing.cpp  test_stashpage.cpp  test_steam_api_key_extractor.cpp  test_steamaccountstore.cpp  test_task_manager.cpp  test_zone_afk_suffix.cpp
tests/ref_basic/: CMakeLists.txt  main.cpp
tests/ref_data/: CMakeLists.txt  main.cpp
tools/: msvc-env.sh
(+87 files in other folders)
